add exception handling and code cleanup in lendbook